feat: add closed sidebar

--- a/index.html
+++ b/index.html
@@ -14,9 +14,26 @@
   </head>
 
   <body>
-    <main>
-      <h1>Dashboard</h1>
-    </main>
+    <div id="container">
+      <header>
+        <nav>
+          <div>
+            <img src="./assets/menu.svg" alt="Ícone de menu">
+            <img src="./assets/search.svg" alt="Ícone de uma lupa">
+            <img src="./assets/grid.svg" alt="Ícone de um grid">
+            <img src="./assets/pet.svg" alt="Ícone de uma pegada de um pet">
+            <img src="./assets/user.svg" alt="Ícone de um usuário">
+            <img src="./assets/vet.svg" alt="Ícone de um veterinário">
+            <img src="./assets/settings.svg" alt="Ícone de uma engrenagem">
+          </div>
+          <img id="logout-icon" src="./assets/log-out.svg"
+            alt="Ícone de logout">
+        </nav>
+      </header>
+      <main>
+        <h1>Dashboard</h1>
+      </main>
+    </div>
   </body>
 
 </html>
