--- a/index.html
+++ b/index.html
@@ -17,17 +17,47 @@
     <div id="container">
       <header>
         <nav>
-          <div>
-            <img src="./assets/menu.svg" alt="Ícone de menu">
-            <img src="./assets/search.svg" alt="Ícone de uma lupa">
-            <img src="./assets/grid.svg" alt="Ícone de um grid">
-            <img src="./assets/pet.svg" alt="Ícone de uma pegada de um pet">
-            <img src="./assets/user.svg" alt="Ícone de um usuário">
-            <img src="./assets/vet.svg" alt="Ícone de um veterinário">
-            <img src="./assets/settings.svg" alt="Ícone de uma engrenagem">
+          <ul>
+            <li>
+              <img id="logo-icon" src="./assets/logo.svg" alt="Logo">
+              <img id="menu-icon" src="./assets/menu.svg" alt="Ícone de menu">
+            </li>
+            <li>
+              <img src="./assets/search.svg" alt="Ícone de uma lupa">
+              <span class="sidebar-text">Buscar</span>
+            </li>
+            <li>
+              <img src="./assets/grid.svg" alt="Ícone de um grid">
+              <span class="sidebar-text">Dashboard</span>
+            </li>
+            <li>
+              <img src="./assets/pet.svg" alt="Ícone de uma pegada de um pet">
+              <span class="sidebar-text">Pets</span>
+            </li>
+            <li>
+              <img src="./assets/user.svg" alt="Ícone de um usuário">
+              <span class="sidebar-text">Clientes</span>
+            </li>
+            <li>
+              <img src="./assets/vet.svg" alt="Ícone de um veterinário">
+              <span class="sidebar-text">Vets</span>
+            </li>
+            <li>
+              <img src="./assets/settings.svg" alt="Ícone de uma engrenagem">
+              <span class="sidebar-text">Ajustes</span>
+            </li>
+          </ul>
+          <div id="logout-container">
+            <div id="logged-user-container">
+              <img id="avatar" src="./assets/photo.jpg" alt="Avatar">
+              <div id="logged-user-info-container">
+                <span class="sidebar-text">Eleanor Pena</span>
+                <span id="user-role">Veterinária</span>
+              </div>
+            </div>
+            <img id="logout-icon" src="./assets/log-out.svg"
+              alt="Ícone de logout">
           </div>
-          <img id="logout-icon" src="./assets/log-out.svg"
-            alt="Ícone de logout">
         </nav>
       </header>
       <main>
