feat: add links in the sidebar

--- a/index.html
+++ b/index.html
@@ -18,44 +18,61 @@
       <div class="sidebar">
         <ul>
           <li>
-            <img id="logo-icon" src="./assets/logo.svg" alt="Logo">
+            <a id="logo-icon" href="#">
+              <img src="./assets/logo.svg" alt="Logo">
+            </a>
             <img id="menu-icon" src="./assets/menu.svg" alt="Ícone de menu">
           </li>
           <li>
-            <img src="./assets/search.svg" alt="Ícone de uma lupa">
-            <span class="sidebar-text">Buscar</span>
+            <a href="#">
+              <img src="./assets/search.svg" alt="Ícone de uma lupa">
+              <span class="sidebar-text">Buscar</span>
+            </a>
           </li>
           <li>
-            <img src="./assets/grid.svg" alt="Ícone de um grid">
-            <span class="sidebar-text">Dashboard</span>
+            <a href="#">
+              <img src="./assets/grid.svg" alt="Ícone de um grid">
+              <span class="sidebar-text">Dashboard</span>
+            </a>
           </li>
           <li>
-            <img src="./assets/pet.svg" alt="Ícone de uma pegada de um pet">
-            <span class="sidebar-text">Pets</span>
+            <a href="#">
+              <img src="./assets/pet.svg" alt="Ícone de uma pegada de um pet">
+              <span class="sidebar-text">Pets</span>
+            </a>
           </li>
           <li>
-            <img src="./assets/user.svg" alt="Ícone de um usuário">
-            <span class="sidebar-text">Clientes</span>
+            <a href="#">
+              <img src="./assets/user.svg" alt="Ícone de um usuário">
+              <span class="sidebar-text">Clientes</span>
+            </a>
           </li>
           <li>
-            <img src="./assets/vet.svg" alt="Ícone de um veterinário">
-            <span class="sidebar-text">Vets</span>
+            <a href="#">
+              <img src="./assets/vet.svg" alt="Ícone de um veterinário">
+              <span class="sidebar-text">Vets</span>
+            </a>
           </li>
           <li>
-            <img src="./assets/settings.svg" alt="Ícone de uma engrenagem">
-            <span class="sidebar-text">Ajustes</span>
+            <a href="#">
+              <img src="./assets/settings.svg" alt="Ícone de uma engrenagem">
+              <span class="sidebar-text">Ajustes</span>
+            </a>
           </li>
         </ul>
         <div id="logout-container">
           <div id="logged-user-container">
-            <img id="avatar" src="./assets/photo.jpg" alt="Avatar">
+            <a id="avatar" href="#">
+              <img src="./assets/photo.jpg" alt="Avatar">
+            </a>
             <div id="logged-user-info-container">
               <span class="sidebar-text">Eleanor Pena</span>
               <span id="user-role">Veterinária</span>
             </div>
           </div>
-          <img id="logout-icon" src="./assets/log-out.svg"
-            alt="Ícone de logout">
+          <a id="logout-icon" href="#">
+            <img src="./assets/log-out.svg" alt="Ícone de logout">
+          </a>
         </div>
       </div>
       <main>
